docs: complete swagger api documentation
